{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 27,
  "lineage": "a16fa925-ac8d-cecc-398f-f88671533c12",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-master",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d9a394ac1c2994c",
            "arn": "arn:aws:ec2:us-west-1:325620063179:instance/i-0160b3b31bb6f2776",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0160b3b31bb6f2776",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e4e33c66bdd47d80",
            "private_dns": "ip-10-0-1-92.us-west-1.compute.internal",
            "private_ip": "10.0.1.92",
            "public_dns": "ec2-13-56-80-3.us-west-1.compute.amazonaws.com",
            "public_ip": "13.56.80.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-006e7ceeb2b419055",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01eae66905c96450e",
            "tags": {
              "Name": "jenkins_master_tf"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07fb3a443e3078a39"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_key_pair.master-key",
            "aws_main_route_table_association.set-master-default-rt-assoc",
            "aws_route_table.internet_route",
            "aws_security_group.jenkins-sg",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_uswest",
            "aws_vpc.vpc_uswest1",
            "aws_vpc_peering_connection.uswest1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-worker-oregon",
      "each": "list",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472933a1395e172",
            "arn": "arn:aws:ec2:us-west-2:325620063179:instance/i-0d899482707c472cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d899482707c472cf",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f4f27ffd21a75062",
            "private_dns": "ip-192-168-1-126.us-west-2.compute.internal",
            "private_ip": "192.168.1.126",
            "public_dns": "ec2-44-226-199-176.us-west-2.compute.amazonaws.com",
            "public_ip": "44.226.199.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-043722951a8d3eca5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f262fface9d3e6db",
            "tags": {
              "Name": "jenkins_worker_tf_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04becb42c0de6fb6e"
            ]
          },
          "dependencies": [
            "aws_instance.jenkins-master",
            "aws_internet_gateway.igw",
            "aws_internet_gateway.igw-oregon",
            "aws_key_pair.master-key",
            "aws_key_pair.worker-key",
            "aws_main_route_table_association.set-master-default-rt-assoc",
            "aws_main_route_table_association.set-worker-default-rt-assoc",
            "aws_route_table.internet_route",
            "aws_route_table.internet_route_oregon",
            "aws_security_group.jenkins-sg",
            "aws_security_group.jenkins-sg-oregon",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_1_oregon",
            "aws_vpc.vpc_uswest",
            "aws_vpc.vpc_uswest1",
            "aws_vpc_peering_connection.uswest1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:325620063179:internet-gateway/igw-0cd9fb1eb70d61799",
            "id": "igw-0cd9fb1eb70d61799",
            "owner_id": "325620063179",
            "vpc_id": "vpc-035dd865c87042843"
          },
          "dependencies": [
            "aws_vpc.vpc_uswest1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:325620063179:internet-gateway/igw-0dc053244eb6a3c9c",
            "id": "igw-0dc053244eb6a3c9c",
            "owner_id": "325620063179",
            "vpc_id": "vpc-0ebf6174d3f14d07a"
          },
          "dependencies": [
            "aws_vpc.vpc_uswest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-lb",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:325620063179:loadbalancer/app/jenkins-lb/134f6ae3d43175bb",
            "arn_suffix": "app/jenkins-lb/134f6ae3d43175bb",
            "dns_name": "jenkins-lb-1250207041.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:325620063179:loadbalancer/app/jenkins-lb/134f6ae3d43175bb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jenkins-lb",
            "security_groups": [
              "sg-00142c906e467205a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01eae66905c96450e"
              },
              {
                "subnet_id": "subnet-097e90edb8a313234"
              }
            ],
            "subnets": [
              "subnet-01eae66905c96450e",
              "subnet-097e90edb8a313234"
            ],
            "tags": {
              "Name": "Jenkins-LB"
            },
            "vpc_id": "vpc-035dd865c87042843",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.jenkins-sg",
            "aws_security_group.lb-sg",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc_uswest1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jenkins-listener-http",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:325620063179:listener/app/jenkins-lb/134f6ae3d43175bb/7a514c3c87bbc218",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:325620063179:targetgroup/app-lb-tg/dc7dcb98a4cbb9d9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:325620063179:listener/app/jenkins-lb/134f6ae3d43175bb/7a514c3c87bbc218",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:325620063179:loadbalancer/app/jenkins-lb/134f6ae3d43175bb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.application-lb",
            "aws_lb_target_group.app-lb-tg",
            "aws_security_group.jenkins-sg",
            "aws_security_group.lb-sg",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc_uswest1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app-lb-tg",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:325620063179:targetgroup/app-lb-tg/dc7dcb98a4cbb9d9",
            "arn_suffix": "targetgroup/app-lb-tg/dc7dcb98a4cbb9d9",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200-299",
                "path": "/login",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:325620063179:targetgroup/app-lb-tg/dc7dcb98a4cbb9d9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app-lb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "jenkins-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-035dd865c87042843"
          },
          "dependencies": [
            "aws_vpc.vpc_uswest1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jenkins-master-attach",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:325620063179:targetgroup/app-lb-tg/dc7dcb98a4cbb9d9-20201205213111022400000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:325620063179:targetgroup/app-lb-tg/dc7dcb98a4cbb9d9",
            "target_id": "i-0160b3b31bb6f2776"
          },
          "dependencies": [
            "aws_instance.jenkins-master",
            "aws_internet_gateway.igw",
            "aws_key_pair.master-key",
            "aws_lb_target_group.app-lb-tg",
            "aws_main_route_table_association.set-master-default-rt-assoc",
            "aws_route_table.internet_route",
            "aws_security_group.jenkins-sg",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_uswest",
            "aws_vpc.vpc_uswest1",
            "aws_vpc_peering_connection.uswest1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set-master-default-rt-assoc",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077700dd328e330cb",
            "original_route_table_id": "rtb-0054ad921fbf78ee8",
            "route_table_id": "rtb-0bc860b9f05c5884a",
            "vpc_id": "vpc-035dd865c87042843"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.internet_route",
            "aws_vpc.vpc_uswest",
            "aws_vpc.vpc_uswest1",
            "aws_vpc_peering_connection.uswest1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set-worker-default-rt-assoc",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f3354fd6fa4da0e",
            "original_route_table_id": "rtb-06e9b361dd447327c",
            "route_table_id": "rtb-038e14cc6bc4c36f6",
            "vpc_id": "vpc-0ebf6174d3f14d07a"
          },
          "dependencies": [
            "aws_internet_gateway.igw-oregon",
            "aws_route_table.internet_route_oregon",
            "aws_vpc.vpc_uswest",
            "aws_vpc.vpc_uswest1",
            "aws_vpc_peering_connection.uswest1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_route",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bc860b9f05c5884a",
            "owner_id": "325620063179",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd9fb1eb70d61799",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "192.168.1.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01593cada3e8ddc02"
              }
            ],
            "tags": {
              "Name": "Master-Region-RT"
            },
            "vpc_id": "vpc-035dd865c87042843"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_uswest",
            "aws_vpc.vpc_uswest1",
            "aws_vpc_peering_connection.uswest1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_route_oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-038e14cc6bc4c36f6",
            "owner_id": "325620063179",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc053244eb6a3c9c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.1.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01593cada3e8ddc02"
              }
            ],
            "tags": {
              "Name": "Worker-Region-RT"
            },
            "vpc_id": "vpc-0ebf6174d3f14d07a"
          },
          "dependencies": [
            "aws_internet_gateway.igw-oregon",
            "aws_vpc.vpc_uswest",
            "aws_vpc.vpc_uswest1",
            "aws_vpc_peering_connection.uswest1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_association",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d58411d1aa9cb5d",
            "route_table_id": "rtb-0bc860b9f05c5884a",
            "subnet_id": "subnet-01eae66905c96450e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.internet_route",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_uswest",
            "aws_vpc.vpc_uswest1",
            "aws_vpc_peering_connection.uswest1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_association_oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08455a4c727f1881a",
            "route_table_id": "rtb-038e14cc6bc4c36f6",
            "subnet_id": "subnet-0f262fface9d3e6db"
          },
          "dependencies": [
            "aws_internet_gateway.igw-oregon",
            "aws_route_table.internet_route_oregon",
            "aws_subnet.subnet_1_oregon",
            "aws_vpc.vpc_uswest",
            "aws_vpc.vpc_uswest1",
            "aws_vpc_peering_connection.uswest1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:325620063179:security-group/sg-07fb3a443e3078a39",
            "description": "Allow TCP/8080 \u0026 TCP/22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07fb3a443e3078a39",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 from our public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "allow traffic from us-west-2",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "325620063179",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-035dd865c87042843"
          },
          "dependencies": [
            "aws_vpc.vpc_uswest1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg-oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:325620063179:security-group/sg-04becb42c0de6fb6e",
            "description": "Allow TCP/8080 \u0026 TCP/22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04becb42c0de6fb6e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 from our public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "Allow traffic from us-west-1",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins-sg-oregon",
            "name_prefix": "",
            "owner_id": "325620063179",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0ebf6174d3f14d07a"
          },
          "dependencies": [
            "aws_vpc.vpc_uswest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:325620063179:security-group/sg-00142c906e467205a",
            "description": "Allow 443 and traffic to Jenkins SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00142c906e467205a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 443 from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80 from anywhere for redirection",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic to jenkins-sg",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07fb3a443e3078a39"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "325620063179",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-035dd865c87042843"
          },
          "dependencies": [
            "aws_security_group.jenkins-sg",
            "aws_vpc.vpc_uswest1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:325620063179:subnet/subnet-01eae66905c96450e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01eae66905c96450e",
            "map_public_ip_on_launch": false,
            "owner_id": "325620063179",
            "vpc_id": "vpc-035dd865c87042843"
          },
          "dependencies": [
            "aws_vpc.vpc_uswest1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1_oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:325620063179:subnet/subnet-0f262fface9d3e6db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0f262fface9d3e6db",
            "map_public_ip_on_launch": false,
            "owner_id": "325620063179",
            "vpc_id": "vpc-0ebf6174d3f14d07a"
          },
          "dependencies": [
            "aws_vpc.vpc_uswest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:325620063179:subnet/subnet-097e90edb8a313234",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-097e90edb8a313234",
            "map_public_ip_on_launch": false,
            "owner_id": "325620063179",
            "vpc_id": "vpc-035dd865c87042843"
          },
          "dependencies": [
            "aws_vpc.vpc_uswest1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_uswest",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:325620063179:vpc/vpc-0ebf6174d3f14d07a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0d69a3f4a12abecf6",
            "default_route_table_id": "rtb-06e9b361dd447327c",
            "default_security_group_id": "sg-05f99aa31cca72816",
            "dhcp_options_id": "dopt-ed197e95",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ebf6174d3f14d07a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06e9b361dd447327c",
            "owner_id": "325620063179",
            "tags": {
              "Name": "worker-vpc-jenkins"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_uswest1",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:325620063179:vpc/vpc-035dd865c87042843",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0372e01191aa681d1",
            "default_route_table_id": "rtb-0054ad921fbf78ee8",
            "default_security_group_id": "sg-0b8952579870a8d87",
            "dhcp_options_id": "dopt-0008bfbab9c04b2d2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-035dd865c87042843",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0054ad921fbf78ee8",
            "owner_id": "325620063179",
            "tags": {
              "Name": "master-vpc-jenkins"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "uswest1-uswest-2",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-01593cada3e8ddc02",
            "peer_owner_id": "325620063179",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0ebf6174d3f14d07a",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-035dd865c87042843"
          },
          "dependencies": [
            "aws_vpc.vpc_uswest",
            "aws_vpc.vpc_uswest1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "accept_peering",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-01593cada3e8ddc02",
            "peer_owner_id": "325620063179",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0ebf6174d3f14d07a",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-035dd865c87042843",
            "vpc_peering_connection_id": "pcx-01593cada3e8ddc02"
          },
          "dependencies": [
            "aws_vpc.vpc_uswest",
            "aws_vpc.vpc_uswest1",
            "aws_vpc_peering_connection.uswest1-uswest-2"
          ]
        }
      ]
    }
  ]
}